                           In client mode (REMAIL n) the pool is flushed every
                             time mixmaster is run unless CLIENTAUTOFLUSH is
                             set to n.  (closes: #676794: Rate implementation
                             doubled)
                           Found that weird bug that sometimes led to "Unknown
                             remailer version!" errors: In chain_randfinal() we
                             selected a random value between 0 and maxrem instead
                             of 0 and maxrem - 1.  Mixmaster now uses
                             broken-chain info from stats. I hope this doesn't
                             break any Nym functionality.
                           Warn if remailer stats are older than a day.

2003-05-08      3.0a5      Experimental feature:  --redirect -l <chain>.
                             If you have a mixmaster message with a
                             chain starting with hop1 (you cannot know any
                             more because it already is encrypted) then
                             mix --redirect -l foo,bar < file
                             redirect the message so the chain is actually
                             foo,bar,hop1,... and places it in your pool.
                             If the total number of hops (which cannot be
                             known) exceeds 20 the message is damanged
                             and will fail at the 20th node.


2003-06-27      3.0a6     Don't send messages to ourselves via the mailsystem
                            but instead place them in the pool as incoming
                            messages so that they will get processed with the
                            next pool run.
                          Hopefully fix a bug with pool stats.

2003-06-27      3.0a7     Two minor fixes for bugs introduced in 3.0a6 and
                            3.0a4.