@@ -414,3 +414,6 @@
 
 2003-06-27      3.0a7     Two minor fixes for bugs introduced in 3.0a6 and
                             3.0a4.
+
+2003            CVS       Minor stats fix.  The date in remailer-stats was
+                            sometimes wrong.
